src/snapshots/openapi_to_rust__test_helpers__discriminated_union_test.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone)]
pub enum MessageResult {
    SucceededResult(SucceededResult),
    ErroredResult(ErroredResult),
    CanceledResult(CanceledResult),
}
impl serde::Serialize for MessageResult {
    fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    where
        S: serde::Serializer,
    {
        match self {
            Self::SucceededResult(payload) => {
                let mut value = serde_json::to_value(payload)
                    .map_err(serde::ser::Error::custom)?;
                let object = value
                    .as_object_mut()
                    .ok_or_else(|| {
                        serde::ser::Error::custom(
                            concat!(
                                "discriminated union variant `",
                                stringify!(SucceededResult),
                                "` did not serialize as an object",
                            ),
                        )
                    })?;
                object
                    .insert(
                        "type".to_string(),
                        serde_json::Value::String("succeeded".to_string()),
                    );
                value.serialize(serializer)
            }
            Self::ErroredResult(payload) => {
                let mut value = serde_json::to_value(payload)
                    .map_err(serde::ser::Error::custom)?;
                let object = value
                    .as_object_mut()
                    .ok_or_else(|| {
                        serde::ser::Error::custom(
                            concat!(
                                "discriminated union variant `", stringify!(ErroredResult),
                                "` did not serialize as an object",
                            ),
                        )
                    })?;
                object
                    .insert(
                        "type".to_string(),
                        serde_json::Value::String("errored".to_string()),
                    );
                value.serialize(serializer)
            }
            Self::CanceledResult(payload) => {
                let mut value = serde_json::to_value(payload)
                    .map_err(serde::ser::Error::custom)?;
                let object = value
                    .as_object_mut()
                    .ok_or_else(|| {
                        serde::ser::Error::custom(
                            concat!(
                                "discriminated union variant `", stringify!(CanceledResult),
                                "` did not serialize as an object",
                            ),
                        )
                    })?;
                object
                    .insert(
                        "type".to_string(),
                        serde_json::Value::String("canceled".to_string()),
                    );
                value.serialize(serializer)
            }
        }
    }
}
impl<'de> serde::Deserialize<'de> for MessageResult {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        let value = serde_json::Value::deserialize(deserializer)?;
        let discriminator = value
            .get("type")
            .and_then(serde_json::Value::as_str)
            .ok_or_else(|| serde::de::Error::custom(
                concat!("missing string discriminator `", "type", "`",),
            ))?
            .to_string();
        match discriminator.as_str() {
            "succeeded" => {
                serde_json::from_value::<SucceededResult>(value)
                    .map(Self::SucceededResult)
                    .map_err(serde::de::Error::custom)
            }
            "errored" => {
                serde_json::from_value::<ErroredResult>(value)
                    .map(Self::ErroredResult)
                    .map_err(serde::de::Error::custom)
            }
            "canceled" => {
                serde_json::from_value::<CanceledResult>(value)
                    .map(Self::CanceledResult)
                    .map_err(serde::de::Error::custom)
            }
            other => {
                Err(
                    serde::de::Error::custom(
                        format!(
                            "unknown discriminator value `{other}` for `{}`", "type",
                        ),
                    ),
                )
            }
        }
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct SucceededResult {
    pub message: Message,
    pub r#type: serde_json::Value,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Message {
    pub content: String,
    pub id: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ErroredResult {
    pub error: String,
    pub r#type: serde_json::Value,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CanceledResult {
    pub reason: String,
    pub r#type: serde_json::Value,
}
